--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: <a href=\"mailto:adrian@example.com\">adrian@example.com</a></p>
+        <p>Email: <a href=\"mailto:addymar06@gmail.com\">addymar06@gmail.com</a></p>
         <p>GitHub: <a href=\"https://github.com/adrianmarcatoma\" target=\"_blank\">adrianmarcatoma</a></p>
     </section>
 </body>
