--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section id="about">
         <h2>About Me</h2>
         <p>I’m Adrian, a CS major who’s passionate about backend dev, cybersecurity, and building cool stuff. Always
-            learning, always leveling up.</p>
+            learning.</p>
     </section>
 
     <section id="projects">
