--- a/index.html
+++ b/index.html
@@ -34,11 +34,21 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: <a href=\"mailto:addymar06@gmail.com\">addymar06@gmail.com</a></p>
-        <p>GitHub: <a href=\"https://github.com/marca7162/" target=\"_blank\">adrianmarcatoma</a></p>
-        <p>LinkedIn: <a href=\"https://www.linkedin.com/in/adrian-marcatoma-villa-2a3b85284/" target=\"_blank\">Adrian
-                Marcatoma</a></p>
+    <p>Email:
+        <a href="mailto:addymar06@gmail.com">addymar06@gmail.com</a>
+    </p>
+    
+    <p>GitHub:
+        <a href="https://github.com/marca7162" target="_blank">adrianmarcatoma</a>
+    </p>
+    
+    <p>LinkedIn:
+        <a href="https://www.linkedin.com/in/adrian-marcatoma-villa-2a3b85284/" target="_blank">
+            Marcatoma
+        </a>
+    </p>
     </section>
+
 </body>
 
 </html>
