--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         </div>
     </section>
 
+    <section id="resume">
+        <h2>My Resume</h2>
+        <embed src="resume.pdf" type="application/pdf" width="100%" height="600px" />
+    </section>
+
     <section id="contact">
         <h2>Contact</h2>
     <p>Email:
