More depth in about section

--- a/index.html
+++ b/index.html
@@ -16,8 +16,21 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I’m Adrian, a CS major who’s passionate about backend dev, cybersecurity, and building cool stuff. Always
-            learning.</p>
+        <p>
+            Hey! I’m Adrian Marcatoma, a Computer Science student at the University of Minnesota with a strong interest in
+            backend development, cybersecurity, and machine learning. I enjoy tackling challenges through code and finding
+            efficient solutions that actually make a difference.
+        </p>
+        <p>
+            Outside of tech, I’m passionate about music — not just listening, but understanding how it’s made, produced, and
+            shared. I love projects that blend creativity with logic, like organizing music by emotion or building
+            mood-based playlist tools. I'm also exploring machine learning as a way to bridge data and expression, with
+            hopes of applying it to real-world problems in both tech and art.
+        </p>
+        <p>
+            Whether I'm coding, creating, or connecting with others, I'm all about growth. I’m always learning, always
+            evolving, and always looking to build something that matters.
+        </p>
     </section>
 
     <section id="projects">
