--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 
 <body>
     <header>
-        <h1>Hi, I'm Adrian</h1>
-        <p>Computer Science Student | Developer in Progress</p>
+        <h1>Adrian Marcatoma</h1>
+        <p>
+            Computer Science Student @ University of Minnesota — College of Science and Engineering (CSE) <br>
+            Banquet Server at Kelber Catering | Retail Worker | Seasonal Outdoor Host @ Monte Carlo <br>
+            Passionate about backend development, cybersecurity, and using machine learning to solve real-world problems.
+        </p>
     </header>
 
     <section id="about">
