--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             Banquet Server at Kelber Catering | Retail Worker | Seasonal Outdoor Host @ Monte Carlo <br>
             Passionate about backend development, cybersecurity, and using machine learning to solve real-world problems.
         </p>
+        <img src="headshot.jpg" alt="Adrian Marcatoma Headshot" class="headshot">
     </header>
 
     <section id="about">
