--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 
 <body>
     <header>
-        <h1>Adrian Marcatoma</h1>
-        <p>
-            Computer Science Student @ University of Minnesota — College of Science and Engineering (CSE) <br>
-            Banquet Server at Kelber Catering | Retail Worker | Seasonal Outdoor Host @ Monte Carlo <br>
-            Passionate about backend development, cybersecurity, and using machine learning to solve real-world problems.
-        </p>
-        <img src="headshot.jpg" alt="Adrian Marcatoma Headshot" class="headshot">
+        <div class="header-container">
+            <img src="headshot.jpg" alt="Adrian Marcatoma Headshot" class="headshot">
+            <div class="header-text">
+                <h1>Adrian Marcatoma</h1>
+                <p>
+                    Computer Science Student @ University of Minnesota — College of Science and Engineering (CSE)<br>
+                    Banquet Server at Kelber Catering | Retail Worker | Seasonal Outdoor Host @ Monte Carlo<br>
+                    Passionate about backend development, cybersecurity, and using machine learning to solve real-world
+                    problems.
+                    </p>
+            </div>
+            </div>
     </header>
 
     <section id="about">
