--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="headshot.jpg" alt="Adrian Marcatoma Headshot" class="headshot">
+            <img src="headshot.jpeg" alt="Adrian Marcatoma Headshot" class="headshot">
             <div class="header-text">
                 <h1>Adrian Marcatoma</h1>
                 <p>
