--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
             <h3>CSCI Auto Grader</h3>
             <p>Helps grade student code by simulating outputs and edge cases.</p>
         </div>
+        <div class="project">
+            <h3> Password Generator V1 and V2</h3>
+            <p>Generates secure passwords with customizable options.</p>
+        </div>
     </section>
 
     <section id="resume">
