--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
             <p>Script that organizes songs by emotional tone using lyrics and metadata.</p>
         </div>
         <div class="project">
-            <h3>CSCI Auto Grader</h3>
-            <p>Helps grade student code by simulating outputs and edge cases.</p>
-        </div>
-        <div class="project">
             <h3> Password Generator V1 and V2</h3>
             <p>Generates secure passwords with customizable options.</p>
+        </div>
+        <div class="project">
+            <h3> Harrasment GPT (WIP) </h3>
+            <p> ChatBot that give our creative jabs</p>
         </div>
     </section>
 
