Added music runner

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
             <h3> Harrasment GPT (WIP) </h3>
             <p> ChatBot that give our creative jabs</p>
         </div>
+        <div class="project">
+            <h3> Music Lyric Runner </h3>
+            <p> A runner that displays the lyrics to music in real time.
+                Currently built for Cheerleader and Sparkle In Your Eyez (WIP)
+            </p>
+        </div>
     </section>
 
     <section id="resume">
