--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="project">
             <h3> Harrasment GPT (WIP) </h3>
-            <p> ChatBot that give our creative jabs</p>
+            <p> ChatBot that give out creative jabs</p>
         </div>
         <div class="project">
             <h3> Music Lyric Runner </h3>
