--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<script>
+    const toggleBtn = document.getElementById("toggle-dark");
+    toggleBtn.addEventListener("click", () => {
+        document.body.classList.toggle("dark");
+        document.querySelector("header").classList.toggle("dark");
+
+        document.querySelectorAll(".project").forEach(el => {
+            el.classList.toggle("dark");
+        });
+    });
+</script>
+
 <body>
     <header>
         <div class="header-container">
@@ -22,6 +34,7 @@
                     </p>
             </div>
             </div>
+            <button id="toggle-dark">Toggle Dark Mode</button>
     </header>
 
     <section id="about">
