Long Term Goals

--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
             evolving, and always looking to build something that matters.
         </p>
     </section>
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Python</li>
+            <li>HTML (In progesss) </li>
+            <li>CSS (In progesss) </li>
+            <li>JavaScript</li>
+            <li>Java</li>
+            <li>C++</li>
+            <li>Git (In progress) </li>
+        </ul>
+    </section>
     <section id="learning">
         <h2> I'm Learning...</h2>
         <ul>
@@ -51,6 +63,13 @@
             <li> Working on HTML and CSS by building this website</li>
         </ul>
     </section>
+    <sections id="Future">
+        <h2> Long Term Goals</h2>
+        <p> I am looking to gain hands on experience in CS with a specialty in Machine Learning via UROP.
+            I am activly looking for study aborad opportunities in Europe, specifically in Spain in order to gain world wide
+            experience in the field of CS.
+        </p>
+    </sections>
     <section id="skills">
         <h2>Skills</h2>
         <ul>
