--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
     <section id="resume">
         <h2>My Resume</h2>
         <embed src="resume.pdf" type="application/pdf" width="100%" height="600px" />
+        <p>Download my resume:
+            <a href="resume.pdf" download>Adrian Marcatoma Resume</a>
+        </p>
     </section>
 
     <section id="contact">
