--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <section id="resume">
         <h2>My Resume</h2>
         <embed src="resume.pdf" type="application/pdf" width="100%" height="600px" />
-        <p>Download my resume:
-            <a href="resume.pdf" download>Adrian Marcatoma Resume</a>
+        <p>Download my Resume:
+            <a href="resume.pdf" download>Link</a>
         </p>
     </section>
 
