--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 
     <section id="contact">
         <h2>Contact</h2>
+        <p>Feel free to reach out to me via email or connect with me on LinkedIn!</p>
+        <p>Phone: <a href="tel:+1(612)-715-1970">+1 (612) 715-1970</a></p>
     <p>Email:
         <a href="mailto:addymar06@gmail.com">addymar06@gmail.com</a>
     </p>
@@ -123,11 +125,11 @@
     
     <p>LinkedIn:
         <a href="https://www.linkedin.com/in/adrian-marcatoma-villa-2a3b85284/" target="_blank">
-            Adrian Marcatoma
+            Adrian Marcatoma Villa
         </a>
     </p>
     <p>HandShake
-        <a href="https://app.joinhandshake.com/profiles/bd2bjt" target="_blank">Adrian Marcatoma</a>
+        <a href="https://app.joinhandshake.com/profiles/bd2bjt" target="_blank">Adrian Marcatoma Villa</a>
     </p>
     </section>
 
