--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
 
 <body>
+    <nav class="navbar">
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#learning">Learning</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#resume">Resume</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
     <header>
         <div class="header-container">
             <img src="headshot.jpeg" alt="Adrian Marcatoma Headshot" class="headshot">
