--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="#about">About Me</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#learning">Learning</a></li>
+            <li><a href="#Future">Future</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#resume">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
