--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
         </ul>
     </section>
     <section id="learning">
-        <h2> I'm Learning...</h2>
+        <h2>I'm Learning...</h2>
         <ul>
             <li> Python: Getting a refresher on Python in CSCI 1133</li>
             <li> Working on HTML and CSS by building this website</li>
         </ul>
     </section>
     <sections id="Future">
-        <h2> Long Term Goals</h2>
+        <h2>Future</h2>
         <p> I am looking to gain hands on experience in CS with a specialty in Machine Learning via UROP.
             I am activly looking for study aborad opportunities in Europe, specifically in Spain in order to gain world wide
             experience in the field of CS.
