Fix to the double skills

--- a/index.html
+++ b/index.html
@@ -55,33 +55,21 @@
             Whether I'm coding, creating, or connecting with others, I'm all about growth. I’m always learning, always
             evolving, and always looking to build something that matters.
         </p>
-    </section>
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>Python</li>
-            <li>HTML (In progesss) </li>
-            <li>CSS (In progesss) </li>
-            <li>JavaScript</li>
-            <li>Java</li>
-            <li>C++</li>
-            <li>Git (In progress) </li>
-        </ul>
-    </section>
     <section id="learning">
         <h2>I'm Learning...</h2>
         <ul>
-            <li> Python: Getting a refresher on Python in CSCI 1133</li>
-            <li> Working on HTML and CSS by building this website</li>
+            <li>📘 Python: Getting a refresher in CSCI 1133</li>
+            <li>🎨 HTML/CSS: Building and styling this website</li>
         </ul>
     </section>
-    <sections id="Future">
+<section id="Future">
         <h2>Future</h2>
-        <p> I am looking to gain hands on experience in CS with a specialty in Machine Learning via UROP.
-            I am activly looking for study aborad opportunities in Europe, specifically in Spain in order to gain world wide
-            experience in the field of CS.
+        <p>
+            I’m looking to gain hands-on experience in CS with a focus on Machine Learning via UROP.
+            I'm actively pursuing study abroad opportunities in Europe — specifically in Spain — to gain real-world global
+            experience in the tech field.
         </p>
-    </sections>
+    </section>
     <section id="skills">
         <h2>Skills</h2>
         <ul>
