--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#about">About Me</a>
         <a href="#skills">Skills</a>
         <a href="#learning">Learning</a>
-        <a href="#goals">Future</a>
+        <a href="#Future">Future</a>
         <a href="#projects">Projects</a>
         <a href="#resume">Resume</a>
         <a href="#contact">Contact</a>
